objects/Con_Req__c.object
<CustomObject>
    <fields>
        <fullName>PO_Status__c</fullName>
        <formula>TEXT( Purchase_Order__r.Status__c )</formula>
        <label>PO Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Total_Freight__c</fullName>
        <formula>Purchase_Order2__r.Total_Freight_Allowed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total freight on affiliated PO
Used for Materials CO&apos;s only</inlineHelpText>
        <label>PO Total Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PV_Change_Order_Total__c</fullName>
        <inlineHelpText>Rollup Summary of Total on Cost Breakdowns with ESD = FALSE</inlineHelpText>
        <label>PV Change Order Total</label>
        <summarizedField>Cost_Breakdown__c.Total__c</summarizedField>
        <summaryFilterItems>
            <field>Cost_Breakdown__c.ESD__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Cost_Breakdown__c.Construction_Requisition__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Vendor Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Change_Orders__c</fullName>
        <label>Pending Change Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_Sheet__c</fullName>
        <label>Plan/Sheet #</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Change_Orders_SUB_MAT__c</fullName>
        <inlineHelpText>Amount of any prior change orders to the Vendor or Sub</inlineHelpText>
        <label>Prior Change Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Change_Orders__c</fullName>
        <inlineHelpText>Amount of any prior change orders at the time of creation</inlineHelpText>
        <label>Prior Change Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Sub_CO_Frozen__c</fullName>
        <description>Contains the total of all prior subcontractor change orders at the time this subcontractor change order was approved.</description>
        <label>Prior Sub CO Frozen</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Sub_CO__c</fullName>
        <formula>IF( ISPICKVAL( Status__c , &quot;Approved&quot;) ,  Prior_Sub_CO_Frozen__c ,  Budget_Line_Item__r.Approved_Sub_Change_Order_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prior Sub Change Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Sub_Change_Orders__c</fullName>
        <description>A sum of all change orders that occurred before this one.</description>
        <label>Prior Sub Change Orders-old</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>/*Product__r.ProductCode*/&quot;9&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Cost__c</fullName>
        <formula>/*Product__r.Cost__c*/9</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Production Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Product you are adding to the Opportunity or PO</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Change Orders (New Product)</relationshipLabel>
        <relationshipName>Con_Req</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production_Modeling__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated Production Modeling record that has a Status field of &quot;Bradley Approved&quot;.</description>
        <inlineHelpText>Select the associated Production Modeling record.  Production Modeling record Status must be &quot;Bradley Approved&quot;.</inlineHelpText>
        <label>Production Modeling</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Production_Modeling__c.Status__c</field>
                <operation>equals</operation>
                <value>Currently Approved</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Production_Modeling__c</referenceTo>
        <relationshipLabel>Change Orders</relationshipLabel>
        <relationshipName>Construction_Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profit_Total__c</fullName>
        <formula>Profit__c * ( Current_Change_Order_Subtotal__c + Labor_Total__c +  Overhead__c +  Additional_Cost_Total__c + Sales_Tax__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Profit__c</fullName>
        <label>Profit (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Budget_Check__c</fullName>
        <description>Compare “Total Cost” to one of the following fields:
1.	If the Project is Pre Contract, we compare to the field Sales Budget;
2.	If the Budget “Parent” of the Budget Line Item is locked (See Question 1), compare to the field Active Budget;
3.	Otherwise (e.g. Project is not Pre Contract and Budget is not Locked), look at PM Budget.
If Total Cost on the Req exceeds the comparison budget from the Budget Line Item, set this field to “Total Cost Exceeds Available Budget.”</description>
        <formula>/*
if (  $RecordType.Name = &quot;Change Order&quot; , &quot;Total Cost Is Within Available Budget&quot; ,
	if ( Budget_Line_Item__r.Pending_Request_Amount__c &gt;
                if ( ISPICKVAL( ASProject__r.Overall_Project_Status__c ,Pre-Contract),   Budget_Line_Item2__r.Sales_Budget__c  ,
			if ( ASProject__r.PM_Lock__c  = True , 
					 Budget_Line_Item2__r.Active_Budget__c  , 
					 Budget_Line_Item2__r.PM_Budget__c 
			)
		) , &quot;Total Cost Exceeds Available Budget&quot;,  &quot;Total Cost Is Within Available Budget&quot; 
	)
)


IF( $RecordType.Name  = &quot;Change Order&quot;,
        &quot;Total Cost Is Within Available Budget.&quot;,
        IF( ISPICKVAL( ASProject__r.Overall_Project_Status__c ,Pre-Contract),
                IF( Budget_Line_Item__r.Pending_Request_Amount__c  &gt;  Budget_Line_Item2__r.Sales_Budget__c ,
                        &quot;Total Cost Exceeds Available Budget (Sales)&quot;,
                        &quot;Total Cost Is Within Available Budget&quot;
                ) , 
                IF( ASProject__r.PM_Lock__c  = True,
                        IF( Budget_Line_Item__r.Pending_Request_Amount__c  &gt;  Budget_Line_Item2__r.Active_Budget__c ,
                                &quot;Total Cost Exceeds Available Budget (Active)&quot;,
                                &quot;Total Cost Is Within Available Budget&quot;
                        ) ,
                        IF( Budget_Line_Item__r.Pending_Request_Amount__c  &gt;  Budget_Line_Item2__r.PM_Budget__c ,
                                &quot;Total Cost Exceeds Available Budget (PM)&quot;,
                                  &quot;Total Cost Is Within Available Budget&quot;
                        )
                )
        )
)*/


&quot;Total Cost Is Within Available Budget.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Manager Budget Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Project Manager Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Rate__c</fullName>
        <defaultValue>150.00</defaultValue>
        <label>Project Manager Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <formula>ASProject__r.Owner_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_PM_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used with LH in CO approval process for Subcontractor under 20K. Only mean to be used when the PD is listed as the Project PM because the PM has not been assigned yet. In this case, we want to approval going one extra step (manager) so the PDs are not approving their own COs.</description>
        <inlineHelpText>Filled in by LH</inlineHelpText>
        <label>Project PM Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_PM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Project Manager
Automatically pulls from the Owner listed on the Project</inlineHelpText>
        <label>Project PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N80000002yrRJEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <formula>CASE( Project__r.SFDC_Project_Status__c , &quot;Pre-Contract&quot;, &quot;Pre-Contract&quot;,
&quot;New&quot;, &quot;New&quot;, &quot;Design&quot;, &quot;Design&quot;, &quot;Construction&quot;,&quot;Construction&quot;, &quot;Completed&quot;, &quot;Completed&quot;,
&quot;On Hold&quot;, &quot;On Hold&quot;, &quot;Dead&quot;, &quot;Dead&quot;, &quot;n/a&quot;)</formula>
        <label>Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SFDCProject</label>
        <referenceTo>SFDC_Project__c</referenceTo>
        <relationshipName>Con_Req</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Purchase Order the CO will modify
Must be a PO for the Vendor listed on the CO</inlineHelpText>
        <label>Purchase Order</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Vendor_Account__c</field>
                <operation>equals</operation>
                <valueField>AcctSeedERP__Purchase_Order__c.AcctSeedERP__Vendor__c</valueField>
            </filterItems>
            <filterItems>
                <field>AcctSeedERP__Purchase_Order__c.AcctSeedERP__Status__c</field>
                <operation>notEqual</operation>
                <value>Closed, Rejected, Cancelled</value>
            </filterItems>
            <infoMessage>PO Vendor field must be the same as CO Vendor Account field and PO Status field cannot be Closed, Cancelled, or Rejected.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeedERP__Purchase_Order__c</referenceTo>
        <relationshipLabel>Change Orders</relationshipLabel>
        <relationshipName>Change_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Con_PO__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Subcontractor PO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Con_PO__c</referenceTo>
        <relationshipName>R00N80000002kftHEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>Original product quantity
Referenced when updating or changing the product and quantity</inlineHelpText>
        <label>Original Quantity-old</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_Category__c</fullName>
        <inlineHelpText>Select the option that best describes the reason for the Change Order</inlineHelpText>
        <label>Reason Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason_for_Change_Order__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Added testing required</fullName>
                </value>
                <value>
                    <fullName>Addressing fine / citation</fullName>
                </value>
                <value>
                    <fullName>Civil</fullName>
                </value>
                <value>
                    <fullName>Close out</fullName>
                </value>
                <value>
                    <fullName>Code enforcement</fullName>
                </value>
                <value>
                    <fullName>Covered in contingency</fullName>
                </value>
                <value>
                    <fullName>Design Change after SAR execution</fullName>
                </value>
                <value>
                    <fullName>Detail update</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Engineering change</fullName>
                </value>
                <value>
                    <fullName>Errors</fullName>
                </value>
                <value>
                    <fullName>Equipment limitation requiring work around</fullName>
                </value>
                <value>
                    <fullName>Equipment modification after delivery</fullName>
                </value>
                <value>
                    <fullName>Equipment standards revised</fullName>
                </value>
                <value>
                    <fullName>Fence</fullName>
                </value>
                <value>
                    <fullName>Fire Department</fullName>
                </value>
                <value>
                    <fullName>Mfr issued new requirements</fullName>
                </value>
                <value>
                    <fullName>Miscommunciation</fullName>
                </value>
                <value>
                    <fullName>Module related</fullName>
                </value>
                <value>
                    <fullName>Municipal Code requirments missed during design - DC disconnects on roof</fullName>
                </value>
                <value>
                    <fullName>MV equipment</fullName>
                </value>
                <value>
                    <fullName>Neighbor issue</fullName>
                </value>
                <value>
                    <fullName>New technical requirements</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Passed through to Owner</fullName>
                </value>
                <value>
                    <fullName>Plants and visual screening</fullName>
                </value>
                <value>
                    <fullName>Poor install needs correction</fullName>
                </value>
                <value>
                    <fullName>Potential AHJ approval cost increase known at handoff</fullName>
                </value>
                <value>
                    <fullName>Potential Interconnection cost increase known at handoff</fullName>
                </value>
                <value>
                    <fullName>Procurement issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Sub_Category__c</fullName>
        <inlineHelpText>Certain categories require further clarification. Select the best option here if required.</inlineHelpText>
        <label>Reason Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engineering Error</fullName>
                </value>
                <value>
                    <fullName>Legal/Finance Error</fullName>
                </value>
                <value>
                    <fullName>PM Error</fullName>
                </value>
                <value>
                    <fullName>Survey Error</fullName>
                </value>
                <value>
                    <fullName>Late order</fullName>
                </value>
                <value>
                    <fullName>Material handling order</fullName>
                </value>
                <value>
                    <fullName>BSS issue</fullName>
                </value>
                <value>
                    <fullName>Owner issue</fullName>
                </value>
                <value>
                    <fullName>Turnarounds</fullName>
                </value>
                <value>
                    <fullName>Stabilized laydown areas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Change_Order__c</fullName>
        <inlineHelpText>Origin of the need for a Change Order</inlineHelpText>
        <label>Reason for Change Order</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Utility</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>AHJ</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <description>Used in apex classes and triggers - makes it easier to determine the record type being used.</description>
        <formula>RecordType.Name</formula>
        <label>RecordTypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Project_Status__c</fullName>
        <formula>TEXT(ASProject__r.Overall_Project_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Available_Budget__c</fullName>
        <formula>IF(Budget_Line_Item2__r.AcctSeed__Budgeted_Amount__c=Budget_Line_Item2__r.Line_Item_Total__c, 0,Budget_Line_Item2__r.AcctSeed__Budgeted_Amount__c -( Budget_Line_Item2__r.Line_Item_Total__c + Amount_Requested__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Budgeted Expense on the line item - (Line Item Total + Amount Requested on CO)
Checks to make sure there is enough money in the budget to cover the amount requested on the CO</inlineHelpText>
        <label>Remaining Available Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <formula>ASProject__r.Owner_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Project Owner (PM)</inlineHelpText>
        <label>Requested By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Ship_Date__c</fullName>
        <label>Requested Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retention_Held__c</fullName>
        <label>Retention Held</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retention_Percent__c</fullName>
        <label>Retention Percent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5%</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>15%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <formula>IF( RecordType.Name = &quot;Material PO Change&quot;, Tax_Rate__c * Amount_Requested__c , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Visit</label>
        <referenceTo>SV__c</referenceTo>
        <relationshipName>Construction_Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N80000002z7KhEAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Shipping</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Site_Super_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Site Super Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Super_Rate__c</fullName>
        <defaultValue>100.00</defaultValue>
        <label>Site Super Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.ASProject__c</field>
                <operation>equals</operation>
                <valueField>Site__c.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Change Orders</relationshipLabel>
        <relationshipName>Change_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Status of the CO
Controlled by the approval process and recall button</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Sent for Signature</fullName>
                </value>
                <value>
                    <fullName>Signed by Customer</fullName>
                </value>
                <value>
                    <fullName>Approval Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Borrego Approved</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>X - Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved By Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <inlineHelpText>Subject of the CO
PRINTS ON CO</inlineHelpText>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Submit_Errors__c</fullName>
        <formula>IF( ISPICKVAL( Status__c , &apos;Approval Pending&apos;)  ||  ISPICKVAL( Status__c , &apos;Approved&apos;),
        &apos;SUBMIT&apos;,
        IF( ISPICKVAL( Status__c , &apos;Recalled&apos;)  ||  ISPICKVAL( Status__c , &apos;X - Rejected&apos;),
                &apos;REJECT&apos;,
                Case (  $RecordType.Name ,
			&apos;Change Order&apos;, 
			 	&apos;Yes&apos;,
			&apos;Subcontractor Change Order&apos;,
				IF (Purchase_Order2__c == null , &apos;PO&apos; , &apos;&apos;) ,
				
			IF (Project_Manager_Budget_Check__c != &apos;Total Cost Is Within Available Budget&apos;,
				&apos;TOTAL&apos;,
				&apos;&apos;
			)	
                )
        )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submit Errors</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <formula>IF( Record_Type_Name__c !=&quot;Customer Change Order&quot;, Original_Unit_Price2__c + Prior_Change_Orders_SUB_MAT__c , Original_Contract_Price3__c  + Prior_Change_Orders__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Original price + Prior CO&apos;s</inlineHelpText>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>System_Designer_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>System Designer Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Designer_Rate__c</fullName>
        <defaultValue>125.00</defaultValue>
        <label>System Designer Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Tax rate to be added to the CO</inlineHelpText>
        <label>Tax Rate</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tools__c</fullName>
        <label>Tools (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TotalProjectReqsCOstoDate__c</fullName>
        <formula>ASProject__r.TotalRequisitionCoststoDate__c +ASProject__r.NonCustomerChangeOrders__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Requisitions + Non-Customer Change Orders on the Project 
TOTAL COMMITTED COSTS TO DATE</inlineHelpText>
        <label>Total Project Req&apos;s + CO&apos;s to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Display__c</fullName>
        <formula>If (  $RecordType.Name = &apos;Subcontractor Change Order&apos; ,
         Amount_Requested__c  ,
          Total_Cost_Tax__c 
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total CostX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Tax__c</fullName>
        <formula>Sales_Tax__c +  Shipping__c +  Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>IF(
	OR( 
		Quantity__c = null, 
		Quantity__c = 0.00
	), 
	Unit_Price__c , Unit_Price__c * Quantity__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre-Tax Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Tax_Current_PO__c</fullName>
        <formula>Purchase_Order2__r.Total_sales_tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sales Tax on the Material PO related to the CO</inlineHelpText>
        <label>Total Tax Current PO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Original Order</fullName>
                </value>
                <value>
                    <fullName>Replacement Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Price2__c</fullName>
        <description>New Unit Price field used for Material PO Change Orders to calculate Amount Requested</description>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Subcontractor Account
Must be an account in Salesforce</inlineHelpText>
        <label>Vendor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Change Orders (Vendor Account)</relationshipLabel>
        <relationshipName>Con_Req</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Subcontractor Contact
Must be a contact in Salesforce</inlineHelpText>
        <label>Vendor Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Change Orders (Vendor Contact)</relationshipLabel>
        <relationshipName>Construction_Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>prior_Change_Order_From_Purchase__c</fullName>
        <formula>Purchase_Order2__r.Change_Order_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>prior_Change_Order_From_Purchase</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Change Order</label>
    <listViews>
        <fullName>Major_Component_Open</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Quantity__c</columns>
        <columns>Product__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Con_Req__c.Material_Change_Order</value>
        </filters>
        <label>Major Component</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SF-CR-{000000}</displayFormat>
        <label>Requisition Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Orders</pluralLabel>
    <recordTypes>
        <fullName>Change_Order</fullName>
        <active>true</active>
        <description>For requesting changes to a Contract Value, or adding/removing products from the contract (and Salesforce Opportunity)</description>
        <label>Customer Change Order</label>
    </recordTypes>
</CustomObject>